folder:create  folder image and group.png image

--- a/index.html
+++ b/index.html
@@ -109,9 +109,7 @@
                 <div class="lg:w-1/2 flex justify-center">
                     <div class="w-80 h-80 bg-white rounded-full shadow-lg flex items-center justify-center">
                         <!-- Professional photo placeholder -->
-                        <div class="w-72 h-72 bg-gradient-to-br from-olive to-pastel-blue rounded-full flex items-center justify-center">
-                            <i class="fas fa-user text-white text-8xl"></i>
-                        </div>
+                        <img src="image/group.png" alt="Ann Tatu" class="w-72 h-72 object-cover rounded-full">
                     </div>
                 </div>
             </div>
