fix:change image properties

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                     </div>
                 </div>
                 <div class="lg:w-1/2 flex justify-center">
-                    <div class="w-80 h-80 bg-white rounded-full shadow-lg flex items-center justify-center">
+                    <div class="w-80 h-80 bg-white rounded-full shadow-lg overflow-hidden flex items-center justify-center">
                         <!-- Professional photo placeholder -->
-                        <img src="image/group.png" alt="Ann Tatu" class="w-72 h-72 object-cover rounded-full">
+                        <img src="image/ann-tatu.jpeg" alt="Ann Tatu" class="w-full h-full object-cover object-top">
                     </div>
                 </div>
             </div>
